@@ -233,13 +233,13 @@
 <tr class="row-odd"><td><strong>BrO_column_number_density</strong></td>
 <td>double</td>
 <td>{<em>time</em>}</td>
-<td>[mol/cm^2]</td>
+<td>[molec/cm^2]</td>
 <td>BrO column number density</td>
 </tr>
 <tr class="row-even"><td><strong>BrO_column_number_density_uncertainty</strong></td>
 <td>double</td>
 <td>{<em>time</em>}</td>
-<td>[mol/cm^2]</td>
+<td>[molec/cm^2]</td>
 <td>uncertainty of the BrO column number density</td>
 </tr>
 <tr class="row-odd"><td><strong>BrO_column_number_density_validity</strong></td>
@@ -269,13 +269,13 @@
 <tr class="row-odd"><td><strong>HCHO_column_number_density</strong></td>
 <td>double</td>
 <td>{<em>time</em>}</td>
-<td>[mol/cm^2]</td>
+<td>[molec/cm^2]</td>
 <td>HCHO column number density</td>
 </tr>
 <tr class="row-even"><td><strong>HCHO_column_number_density_uncertainty</strong></td>
 <td>double</td>
 <td>{<em>time</em>}</td>
-<td>[mol/cm^2]</td>
+<td>[molec/cm^2]</td>
 <td>uncertainty of the HCHO column number density</td>
 </tr>
 <tr class="row-odd"><td><strong>HCHO_column_number_density_validity</strong></td>
@@ -287,13 +287,13 @@
 <tr class="row-even"><td><strong>NO2_column_number_density</strong></td>
 <td>double</td>
 <td>{<em>time</em>}</td>
-<td>[mol/cm^2]</td>
+<td>[molec/cm^2]</td>
 <td>NO2 column number density</td>
 </tr>
 <tr class="row-odd"><td><strong>NO2_column_number_density_uncertainty</strong></td>
 <td>double</td>
 <td>{<em>time</em>}</td>
-<td>[mol/cm^2]</td>
+<td>[molec/cm^2]</td>
 <td>uncertainty of the NO2 column number density</td>
 </tr>
 <tr class="row-even"><td><strong>NO2_column_number_density_validity</strong></td>
@@ -305,13 +305,13 @@
 <tr class="row-odd"><td><strong>tropospheric_NO2_column_number_density</strong></td>
 <td>double</td>
 <td>{<em>time</em>}</td>
-<td>[mol/cm^2]</td>
+<td>[molec/cm^2]</td>
 <td>tropospheric NO2 column number density</td>
 </tr>
 <tr class="row-even"><td><strong>tropospheric_NO2_column_number_density_uncertainty</strong></td>
 <td>double</td>
 <td>{<em>time</em>}</td>
-<td>[mol/cm^2]</td>
+<td>[molec/cm^2]</td>
 <td>uncertainty of the tropospheric NO2 column number density</td>
 </tr>
 <tr class="row-odd"><td><strong>O3_column_number_density</strong></td>
@@ -335,13 +335,13 @@
 <tr class="row-even"><td><strong>OClO_column_number_density</strong></td>
 <td>double</td>
 <td>{<em>time</em>}</td>
-<td>[mol/cm^2]</td>
+<td>[molec/cm^2]</td>
 <td>OClO column number density</td>
 </tr>
 <tr class="row-odd"><td><strong>OClO_column_number_density_uncertainty</strong></td>
 <td>double</td>
 <td>{<em>time</em>}</td>
-<td>[mol/cm^2]</td>
+<td>[molec/cm^2]</td>
 <td>uncertainty of the OClO column number density</td>
 </tr>
 <tr class="row-even"><td><strong>OClO_column_number_density_validity</strong></td>
